# mi-nas-camera-replay

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  cameras.py  days.py  index_jobs.py  locate.py  timeline.py  videos.py
backend/app/core/: auth.py  config.py  db.py
backend/app/models/: __init__.py  day_summary.py  index_job.py  timeline_segment.py  video_file.py
backend/app/schemas/: auth.py  camera.py  day.py  locate.py  timeline.py
backend/app/services/: __init__.py  file_scanner.py  filename_parser.py  locate_service.py  media_probe.py  timeline_builder.py  video_stream.py
backend/app/tasks/: index_scheduler.py  index_videos.py  rebuild_day.py
backend/tests/: conftest.py  test_auth_api.py  test_cameras_api.py  test_config.py  test_cors.py  test_days_api.py  test_db_models.py  test_file_scanner.py  test_filename_parser.py  test_frontend_static.py  test_index_rebuild_api.py  test_index_scheduler.py  test_index_tasks.py  test_locate_api.py  test_locate_service.py  test_media_probe.py  test_timeline_api.py  test_timeline_builder.py  test_video_stream_api.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/tests/: App.test.tsx  LoginPage.test.tsx  PlayerPanel.test.tsx  ReplayPage.test.tsx  TimelineBar.test.tsx  useAuth.test.tsx  usePlaybackController.test.tsx  useReplayDataHooks.test.tsx
(+26 files in other folders)
