[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mi-nas-camera-replay-backend"
version = "0.1.0"
dependencies = [
  "fastapi",
  "httpx",
  "uvicorn[standard]",
  "sqlalchemy",
  "pydantic",
  "pydantic-settings",
  "pytest",
]

[tool.setuptools.packages.find]
include = ["app*"]
